// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getOpenAPI should show every endpoints when authenticated 1`] = `
{
  "response": {
    "body": {
      "info": {
        "title": "test",
        "version": "<already_tested>",
      },
      "openapi": "3.0.0",
      "paths": {
        "/time": {
          "delete": {
            "tags": [
              "public",
              "destroyed",
            ],
            "x-whook": {
              "private": true,
            },
          },
          "get": {
            "tags": [
              "public",
            ],
            "x-whook": {
              "memx": 2,
              "tx": 18,
            },
          },
          "put": {
            "tags": [
              "private",
            ],
            "x-whook": {
              "private": true,
            },
          },
        },
      },
      "tags": [
        {
          "name": "public",
        },
        {
          "name": "private",
        },
      ],
    },
    "status": 200,
  },
}
`;

exports[`getOpenAPI should work 1`] = `
{
  "response": {
    "body": {
      "info": {
        "title": "test",
        "version": "<already_tested>",
      },
      "openapi": "3.0.0",
      "paths": {
        "/time": {
          "get": {
            "tags": [
              "public",
            ],
            "x-whook": undefined,
          },
        },
      },
      "tags": [
        {
          "name": "public",
        },
      ],
    },
    "status": 200,
  },
}
`;

exports[`getOpenAPI should work with muted parameter 1`] = `
{
  "response": {
    "body": {
      "components": {
        "parameters": {
          "xRefToRemove": {
            "in": "header",
            "name": "X-Ref-To-Remove",
          },
        },
      },
      "info": {
        "title": "test",
        "version": "<already_tested>",
      },
      "openapi": "3.0.0",
      "paths": {
        "/time": {
          "get": {
            "parameters": [
              {
                "in": "query",
                "name": "queryParam",
              },
            ],
            "tags": [
              "public",
            ],
            "x-whook": undefined,
          },
        },
      },
      "tags": [
        {
          "name": "public",
        },
      ],
    },
    "status": 200,
  },
}
`;

exports[`getOpenAPI should work with muted tags 1`] = `
{
  "response": {
    "body": {
      "info": {
        "title": "test",
        "version": "<already_tested>",
      },
      "openapi": "3.0.0",
      "paths": {
        "/time": {
          "delete": {
            "tags": [
              "destroyed",
            ],
            "x-whook": {
              "private": true,
            },
          },
          "put": {
            "tags": [
              "private",
            ],
            "x-whook": {
              "private": true,
            },
          },
        },
      },
      "tags": [
        {
          "name": "private",
        },
      ],
    },
    "status": 200,
  },
}
`;
